@@ -122,6 +122,7 @@ global {yylval=strdup("global"); return(GLOBAL_DOMAIN);}
 general {yylval=strdup("general");return(GENERAL);}
 deny {return(DENY);}
 program {return(PROGRAM);}
+program_entry_force {return(PROGRAM_ENTRY_FORCE);}
 domain_trans {return(DOMAIN_TRANS);}
 exclusive {return(EXCLUSIVE_FILE);}
 include {return(INCLUDE);}
